Fixed div container overlapping next/prev buttons - Added meta tags

--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -22,7 +22,7 @@
 }
 
 #container {
-    height: auto;
+    height: 570px;
 }
 
 #container {
